# dReeb

./: .gitignore  MEMORY.md  README.md  memory.md  pyproject.toml
notebooks/: dreeb_tutorial.ipynb
src/dReeb/: dreeb.py  io.py
src/dreeb/: __init__.py  dreeb.py  filter.py  graph.py  io.py  persistence.py  reeb.py  simplify.py  visualize.py
tests/: test_simplified_assignments.py  test_torus_phate_demo.py
