[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dreeb"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "numba>=0.56",
]

[tool.setuptools.packages.find]
where = ["src"]